fix: set Oauth host to configurable

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,8 @@ services:
       - ./credentials.json:/app/credentials.json:ro
       # Optionally mount token file to persist auth across restarts
       # - ./token.json:/app/token.json
+    environment:
+      - WEB_AUTH=true
+      # Uncomment and set OAUTH_HOST if accessing via custom domain or server IP
+      # - OAUTH_HOST=gmail.example.com
     restart: unless-stopped
