--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,3 +63,9 @@ reportUnknownMemberType = false
 reportUnknownArgumentType = false
 reportUnknownVariableType = false
 reportAttributeAccessIssue = false
+
+[tool.ruff]
+# Ignore unused imports (F401) in __init__.py files
+# These imports are used for re-exports, so they're not actually unused
+[tool.ruff.lint]
+per-file-ignores = { "**/__init__.py" = ["F401"] }
