--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,7 +2,7 @@ name: PR Checks
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, labeled, unlabeled]
 
 permissions:
   pull-requests: write
